--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-create-user></app-create-user>
+<app-toggle-theme-switch></app-toggle-theme-switch>
+<app-users-management></app-users-management>
