--- a/src/app/components/form-create/form-create.component.html
+++ b/src/app/components/form-create/form-create.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <label class="title-label">USER MANAGEMENT</label><br />
-  <label>
-    <svg
+<label [class]="error.hasErrorUsername ? 'text-red' : ''">
+      <svg
       xmlns="http://www.w3.org/2000/svg"
       width="16"
       height="14"
@@ -20,11 +20,76 @@
     placeholder="Enter your name"
     name="newUser.username"
     [(ngModel)]="newUser.username"
-  />
+    (keyup)="validateUserName(newUser.username)"
+    />
   <div class="input-group">
     <div>
-      <label>
-        <svg
+    <label  [class]="error.hasErrorFirstName ? 'text-red' : ''">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+          <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+        </svg>
+        First Name </label
+      ><br />
+      <input
+        type="text"
+        placeholder="Enter your first name"
+        name="newUser.firstName"
+        [(ngModel)]="newUser.firstName"
+        (keyup)="validateFirstName(newUser.firstName)"
+      />
+    </div>
+    <div>
+    <label  [class]="error.hasErrorLastName ? 'text-red' : ''">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+          <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+        </svg>
+        Last Name </label
+      ><br />
+      <input
+        type="text"
+        placeholder="Enter your last name"
+        name="newUser.lastName"
+        [(ngModel)]="newUser.lastName"
+        (keyup)="validateLastName(newUser.lastName)"
+      />
+    </div>
+  </div>
+  <div class="input-group">
+    <div>
+    <label [class]="error.hasErrorPassword ? 'text-red' : ''">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
+          <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/>
+        </svg>
+        Password </label
+      ><br />
+      <input
+        type="password"
+        placeholder="Enter your password"
+        name="newUser.password"
+        [(ngModel)]="newUser.password"
+        (keyup)="validatePassword(newUser.password)"
+      />
+    </div>
+    <div>
+    <label [class]="error.hasErrorConfirmPassword ? 'text-red' : ''">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
+          <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/>
+        </svg>
+        Confirm Password </label
+      ><br />
+      <input
+        type="password"
+        placeholder="Confirm your password"
+        name="confirmPassword"
+        [(ngModel)]="confirmPassword"
+        (keyup)="validateConfirmPassword(confirmPassword)"
+      />
+    </div>
+  </div>
+  <div class="input-group">
+    <div>
+    <label>
+              <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="14"
@@ -51,8 +116,8 @@
       />
     </div>
     <div>
-      <label>
-        <svg
+    <label [class]="error.hasErrorGender ? 'text-red' : ''">
+              <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
@@ -67,7 +132,7 @@
         </svg>
         Gender </label
       ><br />
-      <select title="Hi" name="newUser.gender" [(ngModel)]="newUser.gender">
+      <select title="Hi" name="newUser.gender" [(ngModel)]="newUser.gender" (change)="validateGender(newUser.gender)">
         <option value="">Chọn giới tính</option>
         <option value="male">Nam</option>
         <option value="female">Nữ</option>
@@ -75,7 +140,7 @@
       </select>
     </div>
   </div>
-  <label [class]="error.hasErrorEmail?'text-red':''">
+  <label [class]="error.hasErrorEmail ? 'text-red' : ''">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="16"
@@ -97,8 +162,8 @@
     [(ngModel)]="newUser.email"
     (keyup)="validateEmail(newUser.email)"
   />
-  <label>
-    <svg
+<label>
+      <svg
       xmlns="http://www.w3.org/2000/svg"
       width="16"
       height="16"
@@ -119,8 +184,14 @@
     [(ngModel)]="newUser.address"
   />
   <div class="btn-group">
-    <button class="btn btn--primary" (click)="createUser()" [disabled]="error.hasErrorEmail">CREATE</button>
+    <button
+      class="btn btn--primary"
+      (click)="createUser()"
+      [disabled]="hasError()"
+    >
+      CREATE
+    </button>
     <button class="btn" (click)="clearInput()">CANCEL</button>
   </div>
 </div>
-<div>
+<div></div>
