--- a/src/app/components/toggle-theme-switch/toggle-theme-switch.component.css
+++ b/src/app/components/toggle-theme-switch/toggle-theme-switch.component.css
@@ -1,5 +1,38 @@
 .toggle-theme-switch{
   position: absolute;
-  background:white;
+  z-index:1;
+  width:50px;
+  height:50px;
+  background:rgba(255, 255, 255, 0.303);
+  cursor: pointer;
   border-radius: 50%;
+  text-align: center;
+  box-sizing: border-box;
+  margin:90vh 5vw 10vh 95vw;
+  animation: toggle-theme-move;
+  animation-duration:2s;
+  animation-iteration-count: infinite;
+  animation-delay: 0s;
+  animation-direction: ease-out;
+}
+.toggle-theme-switch:hover{
+  background:rgba(255, 255, 255, 0.523);
+  transition:1s;
+}
+.toggle-theme-switch svg{
+  margin-top:9px;
+}
+@keyframes toggle-theme-move {
+  0%{
+    transform:translateY(-1vh);
+  }
+  25%{
+    transform:translateY(1vh);
+  }
+  50%{
+    transform:translateY(1vh);
+  }
+  100%{
+    transform:translateY(-1vh);
+  }
 }
