--- a/src/app/components/users-management/users-management.component.html
+++ b/src/app/components/users-management/users-management.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-<app-form-create [listUsers]="listUsers"  (submit)="createUser($event)"></app-form-create>
-<app-users-list [listUsers]="listUsers"></app-users-list>
+<app-form-create></app-form-create>
+<app-users-list></app-users-list>
 </div>
