--- a/src/app/components/form-create/form-create.component.html
+++ b/src/app/components/form-create/form-create.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <label class="title-label">USER MANAGEMENT</label><br />
+  <label class="title-label">REGISTER</label><br />
 <label [class]="error.hasErrorUsername ? 'text-red' : ''">
       <svg
       xmlns="http://www.w3.org/2000/svg"
