--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-
+@import "~ng-zorro-antd/ng-zorro-antd.min.css";
 *{
   margin:0;
   padding:0;
@@ -7,8 +7,8 @@
 .dark-theme, .dark-theme .modal, .dark-theme .table-header{
   color:white;
   transition:1s;
-  background: rgb(2,0,36);
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(30,36,56,1) 35%, rgba(71,87,91,1) 100%);
+  background: rgb(0,0,0);
+  background: linear-gradient(335deg, rgba(0,0,0,1) 0%, rgba(61,17,56,1) 12%, rgba(0,0,0,1) 100%);
 }
 .dark-theme .modal{
   background:#040d21;
@@ -19,9 +19,8 @@
 .light-theme, .light-theme .modal{
   transition:1s;
   color:black;
-  background: rgb(238,236,255);
-  background: linear-gradient(162deg, rgba(238,236,255,1) 0%, rgba(255,203,249,1) 87%, rgba(255,255,255,1) 100%);
-}
+  background: rgb(255,255,255);
+background: linear-gradient(335deg, rgba(255,255,255,1) 0%, rgba(216,241,238,1) 12%, rgba(255,255,255,1) 100%); }
 .light-theme .modal, .light-theme .table-header{
   background:white;
 }
@@ -59,6 +58,8 @@
   background-image: linear-gradient(rgb(255, 28, 247) 25%, rgb(178, 73, 248) 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  width:100%;
+  text-align: center;
 }
  .wrapper input,.wrapper select{
   width:100%;
